--- a/topics/toc.yml
+++ b/topics/toc.yml
@@ -55,9 +55,9 @@
       - name: Images, screenshots, and GIFs
         href: rn-images-and-screenshots.md
     - name: Contributor's form
-      - items: 
+      items: 
     - name: BACX Owner's form
-      - items: 
+      items: 
       - name: Quick-reference guide
         href: rn-quick-reference-guide.md
       - name: FAQs
