--- a/topics/toc.yml
+++ b/topics/toc.yml
@@ -124,7 +124,7 @@
       href: email-change.md
     - name: Request guest access to GitHub repos
       href: github-access.md
-    - name: Add yourself to Teams chats
+    - name: Join Teams chats
       href: team-chats.md
     - name: Request access to restricted sites
       href: access-sites.md
